[WIP] etiquette silo vrac

--- a/grap_qweb_report/report/qweb_template_product_product.xml
+++ b/grap_qweb_report/report/qweb_template_product_product.xml
@@ -453,25 +453,187 @@ License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl.html).
         </t>
     </template>
 
-<!-- 
-    <template id="qweb_template_label_big">
-        BIG TEMPLATE (c'est big, c'est rouge)
+    <template id="qweb_template_label_bulk_selling">
+        <style type="text/css">
+            body{
+                font-family: arial, verdana, sans-serif;
+            }
+            div.product {
+                border: 3px solid black; 
+                background-color:white;
+                width:10cm; height:9.5cm;
+                margin : 0 -0.2cm -0.1cm 0;
+            }
+            div.floating_box {
+                display : inline-block;
+                vertical-align: top;
+            }
+            div.label_top {
+                display : inline-block;
+                height : 2cm;
+                width :100%;
+                background-color : blue;
+                border-bottom: 3px solid black;
+            }
+            div.label_left {
+                width : 6cm;
+                border-right: 3px solid;
+                height: 7.5cm;
+            }
+            div.label_right {
+                width: 3.3cm;
+                display: inline-block;
+                padding: 4px 8px;
+                font-size : 11px;
+            }
+            div.company_logo {
+                display: inline-block;
+                width : 28%;
+                height: 100%;
+                background-color : red;
+                border-right: 3px solid black;
+                text-align: center;
+            }
+            img.company_logo_image {
+                height: 1.6cm;
+                position: relative; top: 4px; left: 1px;
+            }
+            div.product_informations {
+                text-align:left; font-size:8px;
+                overflow : hidden;
+            }
+            div.product_name{
+                font-size:15px; font-weight:bold;
+                text-transform: uppercase;
+                overflow: hidden;
+                display: inline-block;
+                border-bottom: 3px solid black;
+                width : 62%;
+                background-color : green;
+                vertical-align: top;
+                line-height: 2cm;
+                padding-left: 5px;
+            }
+            div.label_ingredients {
+                padding: 5px 8px;
+                font-size: 11px;
+            }
+            div.label_maker, div.label_origin {
+                height : 1.3cm;
+            }
+            div.product_price {
+                position: relative;
+                text-align: center; 
+            }
+            div.product_price_per_uom_qty, div.product_price_per_uom_price {
+                width: 120%;
+                font-size: 22px;
+                height: 1.5cm;
+                overflow: hidden;
+                word-wrap: normal;
+                border-top: 3px solid;
+                position: relative;
+                right: 13px;
+                top: 10px;
+                line-height: 1.5cm;
+            }
+            span.product_uom {
+                font-size:13px;
+            }
+            div.label_bottom_right {
+                margin-top:0.2cm;
+                text-align:center; font-size:7px;
+                overflow:hidden;
+                font-family:monospace;
+                position: relative; top: 6px;
+            }
+            div.product_labels, div.organic_text{
+                overflow: hidden; float:left;
+                text-align:left;
+            }            
+            div.product_labels{
+                padding-left : 2px;
+                font-size:9px;
+                height:1.4cm;
+            }
+            img.product_label{
+                width:1.3cm; height:1.3cm;
+                position: relative; left: -0.2cm;
+            }
+            div.organic_text{
+                font-size: 7px;
+            }
+            div.wrap_ean13_image{
+                overflow: hidden;
+                position: relative;
+                height: 1.1cm;
+                bottom: 21px;
+                right: 5px;
+            }
+            img.ean13_image{
+                /* NOT YET SUPPORTED BY wkhtmltopdf clip-path: polygon(10% 20%, 90% 20%, 90% 40%, 0% 40%); */
+                width:6.7cm;
+                position: relative;
+                top: 0.5cm;
+            }
+            img.product_image{
+                width: 2.3cm; height: 2.3cm;
+                position: relative; bottom: 0.17cm; left: 0.25cm;
+            }
+        </style>
         <t t-foreach="category_data['lines']" t-as="line">
-
             <t t-foreach="line.quantity" t-as="q">
-                <div style="border: 1px solid; background-color:red">
-                    <div>
-                        <t t-esc="line.product_id.name"/>
+                <div class="product floating_box">
+                    <!-- Label top -->
+                    <div class="label_top">
+                        <div class="company_logo">
+                            <img class="company_logo_image" t-attf-src="data:image/*;base64,{{line.product_id.company_id.pricetag_image}}"/>
+                        </div><!--
+                        --><div class="product_name">
+                            <t t-esc="line.product_id.name"/>
+                        </div>
                     </div>
-                    <div>
-                        <t t-if="line.product_id.code">Code: <t t-esc="line.product_id.code"/><br/></t>
-                    </div>
-                    <div class="product_price">
-                        <t t-esc="'%0.2f' % (line.product_id.list_price)"/>€
-                    </div>
-                </div>
+                    <!-- Label bottom -->
+                    <div class="label_bottom floating_box">
+                        <div class="label_left floating_box">
+                            <div class="label_ingredients">
+                                <t t-if="line.product_id.ingredients"><b>Ingrédients</b><br/><t t-esc="line.product_id.ingredients"/><br/></t>
+                            </div>
+                        </div>
+                        <div class="label_right">
+                            <div class="label_right_infos">
+                                <div class="label_maker">
+                                    <t t-if="line.product_id.maker_description"><b>Fournisseur</b><br/><t t-esc="line.product_id.maker_description"/><br/></t>
+                                </div>
+                                <div class="label_origin">
+                                    <t t-if="line.product_id.pricetag_origin"><b>Origine</b><br/><t t-esc="line.product_id.pricetag_origin"/><br/></t>
+                                </div>
+                                <div class="product_labels">
+                                    <!-- Product Label -->
+                                    <t t-foreach="line.product_id.label_ids" t-as="label">
+                                        <img class="product_label" t-attf-src="data:image/*;base64,{{label.image}}" t-att-alt="label.name"/>
+                                    </t>
+                                </div>
+                                <div class="organic_text">
+                                    <!-- Organic warning, if any -->
+                                    <t t-if="not line.product_id.pricetag_organic_text_ignore">
+                                        <t t-esc="line.product_id.pricetag_organic_text"/><br/>
+                                    </t>
+                                </div>
+                            </div>
+                            <div class="product_price_per_uom_price">
+                                <div class="product_price">
+                                    <t t-if="line.product_id.price_volume"><b><t t-esc="line.product_id.price_volume"/> €</b><span class="product_uom">/L</span><br/></t>
+                                    <t t-if="line.product_id.price_weight_net"><b><t t-esc="line.product_id.price_weight_net"/> €</b><span class="product_uom">/kg</span><br/></t>
+                                </div>
+                            </div>
+                        </div>
+                    </div> <!-- /label_bottom -->
+                </div><!-- /product -->
             </t>
         </t>
     </template>
--->
+
 </data></openerp>
+
+
