[ADD] etiquette silos

--- a/grap_qweb_report/report/qweb_template_product_product.xml
+++ b/grap_qweb_report/report/qweb_template_product_product.xml
@@ -461,8 +461,8 @@ License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl.html).
             div.product {
                 border: 3px solid black; 
                 background-color:white;
-                width:10cm; height:9.5cm;
-                margin : 0 -0.2cm -0.1cm 0;
+                width:11.65cm; height:11.37cm;
+                margin : 0 -0.1cm 0.05cm 0;
             }
             div.floating_box {
                 display : inline-block;
@@ -470,64 +470,82 @@ License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl.html).
             }
             div.label_top {
                 display : inline-block;
+                overflow: hidden;
                 height : 2cm;
                 width :100%;
-                background-color : blue;
                 border-bottom: 3px solid black;
             }
             div.label_left {
                 width : 6cm;
                 border-right: 3px solid;
-                height: 7.5cm;
+                height: 9.27cm;
+                position: relative;
+                bottom: 2px;
+                padding-top: 2px;
+            }
+            div.label_left_div {
+                padding: 5px 8px;
+                overflow: hidden;
             }
             div.label_right {
-                width: 3.3cm;
+                width: 5cm;
                 display: inline-block;
                 padding: 4px 8px;
-                font-size : 11px;
+                font-size : 15px;
             }
             div.company_logo {
                 display: inline-block;
                 width : 28%;
                 height: 100%;
-                background-color : red;
                 border-right: 3px solid black;
                 text-align: center;
             }
             img.company_logo_image {
                 height: 1.6cm;
-                position: relative; top: 4px; left: 1px;
+                position: relative; top: 7px; left: 1px;
             }
             div.product_informations {
                 text-align:left; font-size:8px;
                 overflow : hidden;
             }
             div.product_name{
-                font-size:15px; font-weight:bold;
+                font-size:18px; font-weight:bold;
                 text-transform: uppercase;
                 overflow: hidden;
                 display: inline-block;
-                border-bottom: 3px solid black;
-                width : 62%;
-                background-color : green;
+                width : 69%; height: 1.3cm;
+                padding-left: 7px;
                 vertical-align: top;
-                line-height: 2cm;
-                padding-left: 5px;
+                line-height: 1.3em;
+                position: relative; top: 1.2em;
+                text-align: center;
             }
             div.label_ingredients {
-                padding: 5px 8px;
-                font-size: 11px;
+                font-size: 15px;
+                line-height: 1.2em;
+                height: 5cm;
+            }
+            div.label_allergens {
+                font-size: 13px;
+                max-height: 1.4cm;
+            }
+            div.label_bulk_infos {
+                font-size: 13px;
+                line-height: 1.5em;
+                height: 1.2cm;
             }
             div.label_maker, div.label_origin {
-                height : 1.3cm;
+                height : 1.55cm;
+                margin-bottom: 5px;
+                overflow: hidden;
             }
             div.product_price {
                 position: relative;
                 text-align: center; 
             }
             div.product_price_per_uom_qty, div.product_price_per_uom_price {
-                width: 120%;
-                font-size: 22px;
+                width: 5.65cm;
+                font-size: 28px;
                 height: 1.5cm;
                 overflow: hidden;
                 word-wrap: normal;
@@ -537,8 +555,23 @@ License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl.html).
                 top: 10px;
                 line-height: 1.5cm;
             }
+            div.product_price_per_uom_price_big {
+                height: 3cm; width: 5.65cm;
+                overflow: hidden;
+                word-wrap: normal;
+                border-top: 3px solid;
+                position: relative;
+                top: 10px; right: 13px;
+            }
+            div.product_price_big {
+                position: relative; top: 30px;
+                font-size: 40px; text-align: center;
+            }
             span.product_uom {
                 font-size:13px;
+            }
+            span.product_uom_big {
+                font-size:25px;
             }
             div.label_bottom_right {
                 margin-top:0.2cm;
@@ -552,16 +585,16 @@ License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl.html).
                 text-align:left;
             }            
             div.product_labels{
-                padding-left : 2px;
+                padding-left : 2px; margin-top: 2px;
                 font-size:9px;
-                height:1.4cm;
+                height:1.9cm; width: 100%;
             }
             img.product_label{
-                width:1.3cm; height:1.3cm;
+                width:1.6cm; height:1.6cm;
                 position: relative; left: -0.2cm;
             }
             div.organic_text{
-                font-size: 7px;
+                font-size: 9px;
             }
             div.wrap_ean13_image{
                 overflow: hidden;
@@ -570,23 +603,27 @@ License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl.html).
                 bottom: 21px;
                 right: 5px;
             }
+            div.wrap_product_code {
+                text-align: center; width: 5.6cm;
+            }
             img.ean13_image{
                 /* NOT YET SUPPORTED BY wkhtmltopdf clip-path: polygon(10% 20%, 90% 20%, 90% 40%, 0% 40%); */
-                width:6.7cm;
+                width: 5.5cm;
                 position: relative;
-                top: 0.5cm;
+                top: 0.3cm;
             }
             img.product_image{
                 width: 2.3cm; height: 2.3cm;
-                position: relative; bottom: 0.17cm; left: 0.25cm;
+                position: relative; left: 45px;
             }
         </style>
         <t t-foreach="category_data['lines']" t-as="line">
             <t t-foreach="line.quantity" t-as="q">
                 <div class="product floating_box">
-                    <!-- Label top -->
-                    <div class="label_top">
-                        <div class="company_logo">
+                    <!-- Label top
+                    <t t-raw="line.product_id.pricetag_type_id.color"/> -->
+                    <div class="label_top" t-attf-style="background-color: {{ line.product_id.pricetag_type_id.color }};">
+                        <div class="company_logo" style="background-color:white;">
                             <img class="company_logo_image" t-attf-src="data:image/*;base64,{{line.product_id.company_id.pricetag_image}}"/>
                         </div><!--
                         --><div class="product_name">
@@ -596,8 +633,27 @@ License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl.html).
                     <!-- Label bottom -->
                     <div class="label_bottom floating_box">
                         <div class="label_left floating_box">
-                            <div class="label_ingredients">
-                                <t t-if="line.product_id.ingredients"><b>Ingrédients</b><br/><t t-esc="line.product_id.ingredients"/><br/></t>
+                            <div class="label_ingredients label_left_div">
+                                <t t-if="line.product_id.ingredients"><b>Ingrédients</b><br/><t t-raw="line.product_id.ingredients"/><br/></t>
+                            </div> 
+                            <div class="label_allergens label_left_div">
+                                <b>Peut contenir des traces de de soja, oeuf, fruits à coque, sésame et arachide.</b><br/>
+                            </div>
+                            <div class="label_bulk_infos label_left_div">
+                                <span>N° Lot :</span><br/>
+                                <span>DLUO :</span><br/>
+                            </div>
+                            <div class="label_left_div floating_box">
+                                <t t-if="line.product_id.ean13">
+                                    <div class="wrap_ean13_image">
+                                        <img class="ean13_image" t-attf-src="data:image/*;base64,{{line.product_id.ean13_image}}"/>
+                                    </div>
+                                </t>
+                                <t t-if="not line.product_id.ean13">
+                                    <div class="wrap_product_code">
+                                        <t t-if="line.product_id.code"><b><t t-esc="line.product_id.code"/></b><br/></t>
+                                    </div>
+                                </t>
                             </div>
                         </div>
                         <div class="label_right">
@@ -620,13 +676,27 @@ License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl.html).
                                         <t t-esc="line.product_id.pricetag_organic_text"/><br/>
                                     </t>
                                 </div>
-                            </div>
-                            <div class="product_price_per_uom_price">
-                                <div class="product_price">
-                                    <t t-if="line.product_id.price_volume"><b><t t-esc="line.product_id.price_volume"/> €</b><span class="product_uom">/L</span><br/></t>
-                                    <t t-if="line.product_id.price_weight_net"><b><t t-esc="line.product_id.price_weight_net"/> €</b><span class="product_uom">/kg</span><br/></t>
+                            </div><!--
+                            <t t-if="line.product_id.pricetag_image">
+                                <div class="product_price_per_uom_price">
+                                    <div class="product_price">
+                                        <t t-if="line.product_id.price_volume"><b><t t-esc="line.product_id.price_volume"/> €</b><span class="product_uom">/L</span><br/></t>
+                                        <t t-if="line.product_id.price_weight_net"><b><t t-esc="line.product_id.price_weight_net"/> €</b><span class="product_uom">/kg</span><br/></t>
+                                    </div>
                                 </div>
-                            </div>
+                                <div class="product_image">
+                                    <img class="product_image" t-attf-src="data:image/*;base64,{{line.product_id.pricetag_image}}"/>
+                                </div>
+                            </t>-->
+                            <!--<t t-if="not line.product_id.pricetag_image">-->
+                            <t t-if="line.product_id.pricetag_image">
+                                <div class="product_price_per_uom_price_big">
+                                    <div class="product_price_big">
+                                        <t t-if="line.product_id.price_volume"><b><t t-esc="line.product_id.price_volume"/>€</b><span class="product_uom_big">/L</span><br/></t>
+                                        <t t-if="line.product_id.price_weight_net"><b><t t-esc="line.product_id.price_weight_net"/> €</b><span class="product_uom_big">/kg</span><br/></t>
+                                    </div>
+                                </div>
+                            </t>
                         </div>
                     </div> <!-- /label_bottom -->
                 </div><!-- /product -->
