[ADD] css pour les colonnes triées

--- a/grap_change_views/static/src/css/grap_change_views.css
+++ b/grap_change_views/static/src/css/grap_change_views.css
@@ -101,6 +101,10 @@
     text-overflow: ellipsis;
 }
 
+.sortdown,.sortup {
+    background-color: #dbdbdb
+}
+
 /* project - view_task_kanban                                           */
 .openerp span[data-original-title="Remaining hours"] {
     display: none !important;
