--- a/grap_change_views/views/view_account_invoice.xml
+++ b/grap_change_views/views/view_account_invoice.xml
@@ -14,6 +14,9 @@ License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl.html).
         <field name="inherit_id" ref="account.invoice_form"/>
         <field name="priority">300</field>
         <field name="arch" type="xml">
+            <button name="invoice_open" position="after">
+                <button name="action_invoice_sent" type="object" string="Send by Email" attrs="{'invisible':[('state', 'not in', ['draft','paid'])]}" groups="base.group_user"/>
+            </button>
             <xpath expr="//field[@name='invoice_line']/tree/field[@name='quantity']" position="attributes">
                 <attribute name="string">Qty</attribute>
             </xpath>
